# Chess_Final_Project_TO

./: Bishop.cpp  Bishop.h  Black_Bishop.cpp  Black_Bishop.h  Black_King.cpp  Black_King.h  Black_Knight.cpp  Black_Knight.h  Black_Pawn.cpp  Black_Pawn.h  Black_Queen.cpp  Black_Queen.h  Black_Rook.cpp  Black_Rook.h  Board.cpp  Board.h  Board.ui  CMakeLists.txt  CMakeLists.txt.user.74932ed  ControlInterface.cpp  ControlInterface.h  ControlInterface.ui  Icons.qrc  King.cpp  King.h  Knight.cpp  Knight.h  Movement.cpp  Movement.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  White_Bishop.cpp  White_Bishop.h  (+14 more)
